[package]
name = "java-properties"
version = "1.1.1"
authors = ["Adam Crume <adamcrume@gmail.com>"]
description = "A library for reading and writing Java properties files in Rust."
keywords = ["java", "properties"]
readme = "README.md"
repository = "https://github.com/adamcrume/java-properties"
license = "MIT"
documentation = "https://adamcrume.github.io/java-properties"
edition = "2018"

[dependencies]
encoding = "0.2.33"
regex = "1.1.0"
